[package]
name = "rand-utf8"
version = "0.0.2"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2021"
description = "Random utf8 utility"
keywords = ["rand", "random", "utf8"]
categories = ["algorithms", "cryptography"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rand-utf8"
repository = "https://github.com/holochain/rand-utf8"

[dependencies]
rand = { version = "0.9", default-features = false }

[dev-dependencies]
libc-print = "0.1.19"
rand = { version = "0.9", default-features = false, features = [ "alloc", "small_rng" ] }
